# django-multidb

./: pyproject.toml
src/: student.sqlite3  teacher.sqlite3  user.sqlite3
src/core/: settings.py  urls.py
src/core/routers/: db_routers.py
src/student/: models.py  urls.py  views.py
src/student/migrations/: 0001_initial.py
src/teacher/: models.py  urls.py  views.py
src/teacher/migrations/: 0001_initial.py
src/user/: models.py
src/user/migrations/: 0001_initial.py
